Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
Many drivers have insufficient stubs for power IRPs. They'll either complete the request instead of forwarding it, or leak the IRP (CORE-10105).
This results e.g. in all the "(ntoskrnl/po/power.c:211) Device 'xxx' failed IRP_MN_SET_POWER" messages on shutdown.
Additionally CORE-10110 hides some instances of this bug since most drivers' power handlers are never called.
Attachments
Issue Links
- relates to
-
CORE-10105 IRP leaks across the code base
-
- Resolved
-
-
CORE-10110 Pop[Query|Set]SystemPowerStateTraverse sends power IRPs to the PDO instead of the top of the stack
-
- Resolved
-