[PCI] - Better stub IRP_MJ_POWER handlers. Failing IRP_MN_SET_POWER is illegal! CORE-10117

svn path=/trunk/; revision=69050